提出後修正１

--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -6,7 +6,7 @@
         <%= @prototype.title %>
       </p>
 
-      <%= link_to "#{@prototype.user.name}", user_path, class: :prototype__user %>
+      <%= link_to "#{@prototype.user.name}", user_path(@prototype.user), class: :prototype__user %>
 
       <% if user_signed_in? && current_user.id == @prototype.user.id %>
         <div class="prototype__manage">
@@ -15,7 +15,6 @@
         </div>
       <% end %>
 
-      <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__image">
           <%= image_tag @prototype.image %>
         </div>
@@ -33,9 +32,6 @@
             </p>
           </div>
         </div>
-      <% end %>
-
-
 
       <div class="prototype__comments">
         <% if user_signed_in? %>
@@ -49,8 +45,6 @@
             </div>
           <% end %>
         <% end %>
-        
-
 
         <ul class="comments_lists">
           <% @comments.each do |comment| %>
@@ -61,7 +55,6 @@
           <% end %>
         </ul>
       </div>
-
 
     </div>
   </div>
